WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308106
Supress 'CGPatternCreateWithImage2' is deprecated: Don't use CGPatternCreateWithImage2; use CGDataProviderGetSizeOfData instead
https://bugs.webkit.org/show_bug.cgi?id=308106
Summary
Supress 'CGPatternCreateWithImage2' is deprecated: Don't use CGPatternCreateW...
Jonathan Bedard
Reported
2026-02-17 20:58:14 PST
CGPatternCreateWithImage2 was deprecated. Supress the warning until resolved.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-02-17 20:58:15 PST
<
rdar://problem/170607032
>
Jonathan Bedard
Comment 2
2026-02-17 20:59:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58899
EWS
Comment 3
2026-02-17 21:34:04 PST
Committed
307743@main
(00f61d4b4190): <
https://commits.webkit.org/307743@main
> Reviewed commits have been landed. Closing PR #58899 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug