Supress 'CGPatternCreateWithImage2' is deprecated: Don't use CGPatternCreateWithImage2; use CGDataProviderGetSizeOfData instead https://bugs.webkit.org/show_bug.cgi?id=308106 rdar://170607032

Unreviewed silencing deprecation warning.

* Source/WebCore/platform/graphics/cg/PatternCG.cpp:
(WebCore::Pattern::createPlatformPattern const):

Canonical link: https://commits.webkit.org/307743@main